--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,5 +1,42 @@
 @@include('../layout/header.html', {
-    "title": "Ландшафт"
+"title": "Ландшафт"
 })
+
+<div class="container">
+    <section class="landscape-solutions">
+        <div class="landscape-solutions__image _1">
+            <img src="/img/landscape-solutions.png" alt="">
+        </div>
+        <div class="landscape-solutions__image _2">
+            <img src="/img/landscape-solutions1.png" alt="">
+        </div>
+        <div class="landscape-solutions__center">
+            <div class="section__title landscape-solutions__title">
+                <h2 class="section__title_h2">
+                    Индивидуальные ландшафтные решения
+                    для самых взыскательных клиентов.
+                </h2>
+                <div class="landscape-solutions__title_line section__title_line"></div>
+                <button class="landscape-solutions__request button">
+                    Оставить заявку
+                </button>
+            </div>
+            <div class="landscape-solutions__image _3">
+                <img src="/img/landscape-solutions2.png" alt="">
+            </div>
+        </div>
+        <div class="landscape-solutions__center-right">
+            <div class="landscape-solutions__image _4">
+                <img src="/img/landscape-solutions3.png" alt="">
+            </div>
+            <button class="landscape-solutions__expense-account button">
+                Рассчитать стоимость проекта
+            </button>
+        </div>
+        <div class="landscape-solutions__image _5">
+            <img src="/img/landscape-solutions4.png" alt="">
+        </div>
+    </section>
+</div>
 
 @@include('../layout/footer.html')
