--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -37,6 +37,163 @@
             <img src="/img/landscape-solutions4.png" alt="">
         </div>
     </section>
+
+    <section class="landscape">
+        <h1 class="landscape__title">
+            Ландшафтный дом
+        </h1>
+        <div class="landscape__center">
+            <div class="landscape__content">
+                <div class="landscape__text">
+                    <p>
+                        Здравствуйте! Я Евгений Джелемей – ландшафтный архитектор и руководитель студии ЛАНДШАФТНЫЙ ДОМ.
+                        С 2012 г. со своей командой проектирую и строю сады в Москве. Создание сада – это искусство,
+                        объединившее в себе архитектуру, дендрологию, инженерное проектирование, цветоводство, культуру,
+                        историю и многие другие области знаний. Ландшафтная архитектура участка должна отражать взгляд в
+                        будущее и предвосхищать тенденции в благоустройстве. Ландшафтный архитектор, по моему мнению,
+                        находится в постоянном диалоге с заказчиком для достижения максимального результата.
+                    </p>
+                    <p>
+                        С уважением Евгений Джелемей – ландшафтный архитектор.
+                    </p>
+                </div>
+                <button class="landscape__button button">
+                    Получить консультацию
+                </button>
+            </div>
+            <div class="landscape__image">
+                <img src="/img/general-manager.png" alt="Евгений Джелемей">
+            </div>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="section__title services__title">
+            <div class="section__title_line"></div>
+            <h2 class="services__h2">
+                Наши услуги
+            </h2>
+        </div>
+        <ul class="services__list">
+            <li class="services__item">
+                <a class="services__item_inner" href="">
+                    <div class="services__item_image">
+                        <img src="/img/garden-care-services.png" alt="Услуги по уходу за садом">
+                    </div>
+                    <div class="services__item_title">
+                        Услуги по уходу за садом
+                    </div>
+                    <div class="services__item_description">
+                        Услуги по уходу за садом
+                    </div>
+                </a>
+            </li>
+            <li class="services__item">
+                <a class="services__item_inner" href="">
+                    <div class="services__item_image">
+                        <img src="/img/landscaping-site.png" alt="Озеленение участка">
+                    </div>
+                    <div class="services__item_title">
+                        Озеленение участка
+                    </div>
+                    <div class="services__item_description">
+                        Услуги по уходу за садом
+                    </div>
+                </a>
+            </li>
+            <li class="services__item">
+                <a class="services__item_inner" href="">
+                    <div class="services__item_image">
+                        <img src="/img/planting-plants.png" alt="Посадка растений">
+                    </div>
+                    <div class="services__item_title">
+                        Посадка растений
+                    </div>
+                    <div class="services__item_description">
+                        Услуги по уходу за садом
+                    </div>
+                </a>
+            </li>
+            <li class="services__item">
+                <a class="services__item_inner" href="">
+                    <div class="services__item_image">
+                        <img src="/img/garden-and-park-construction.png" alt="Садово-парковое строительство">
+                    </div>
+                    <div class="services__item_title">
+                        Садово-парковое строительство
+                    </div>
+                    <div class="services__item_description">
+                        Услуги по уходу за садом
+                    </div>
+                </a>
+            </li>
+            <li class="services__item">
+                <a class="services__item_inner" href="">
+                    <div class="services__item_image">
+                        <img src="/img/landscape-construction.png" alt="Ландшафтное строительство">
+                    </div>
+                    <div class="services__item_title">
+                        Ландшафтное строительство
+                    </div>
+                    <div class="services__item_description">
+                        Услуги по уходу за садом
+                    </div>
+                </a>
+            </li>
+            <li class="services__item">
+                <a class="services__item_inner" href="">
+                    <div class="services__item_image">
+                        <img src="/img/landscape-design.png" alt="Ландшафтный дизайн">
+                    </div>
+                    <div class="services__item_title">
+                        Ландшафтный дизайн
+                    </div>
+                    <div class="services__item_description">
+                        Услуги по уходу за садом
+                    </div>
+                </a>
+            </li>
+            <li class="services__item">
+                <a class="services__item_inner" href="">
+                    <div class="services__item_image">
+                        <img src="/img/landscape-designing.png" alt="Ландшафтное проектирование">
+                    </div>
+                    <div class="services__item_title">
+                        Ландшафтное проектирование
+                    </div>
+                    <div class="services__item_description">
+                        Услуги по уходу за садом
+                    </div>
+                </a>
+            </li>
+            <li class="services__item">
+                <a class="services__item_inner" href="">
+                    <div class="services__item_image">
+                        <img src="/img/equipment-design.png" alt="Оснащение дизайн">
+                    </div>
+                    <div class="services__item_title">
+                        Оснащение дизайн
+                    </div>
+                    <div class="services__item_description">
+                        Услуги по уходу за садом
+                    </div>
+                </a>
+            </li>
+            <li class="services__item">
+                <a class="services__item_inner" href="">
+                    <div class="services__item_image">
+                        <img src="/img/growing-fauna.png" alt="Выращивание фауны">
+                    </div>
+                    <div class="services__item_title">
+                        Выращивание фауны
+                    </div>
+                    <div class="services__item_description">
+                        Услуги по уходу за садом
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </section>
 </div>
 
 @@include('../layout/footer.html')
