--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -196,4 +196,109 @@
     </section>
 </div>
 
+<section class="consultation">
+    <div class="container">
+        <div class="consultation__container">
+            <div class="consultation__title section__title">
+                <h2 class="section__title_h2">
+                    Скачайте каталог и получите бесплатную консультацию!
+                </h2>
+                <div class="section__title_line-min"></div>
+            </div>
+            <div class="consultation__content">
+                <div class="consultation__content_top">
+                    <div class="consultation__email">
+                        <input class="consultation__input input" type="email" placeholder="E-mail">
+                    </div>
+                    <div class="consultation__content_line"></div>
+                    <button class="consultation__button button-second">
+                        ПОЛУЧИТЬ
+                    </button>
+                </div>
+                <div class="consultation__content_bottom">
+                    <label class="checkbox" for="personalData">
+                        <input class="checkbox__input" type="checkbox" id="personalData" hidden>
+                        <span class="checkbox__icon"></span>
+                        <span class="checkbox__text">
+                            Я даю согласие на обработку своих персональных данных.
+                        </span>
+                    </label>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="portfolio">
+    <div class="container">
+        <div class="portfolio__title section__title">
+            <div class="portfolio__title_line section__title_line"></div>
+            <h2 class="section__title_h2">
+                Портфолио
+            </h2>
+        </div>
+        <ul class="portfolio__links">
+            <li class="portfolio__link">
+                <a class="portfolio__link_href button" href="">
+                    Примеры проектировния
+                </a>
+            </li>
+            <li class="portfolio__link">
+                <a class="portfolio__link_href button" href="">
+                    Примеры визуализации
+                </a>
+            </li>
+            <li class="portfolio__link">
+                <a class="portfolio__link_href button" href="">
+                    Примеры реализации
+                </a>
+            </li>
+            <li class="portfolio__link">
+                <a class="portfolio__link_href button" href="">
+                    Портфолио обслуживания
+                </a>
+            </li>
+        </ul>
+    </div>
+    <ul class="portfolio__projects">
+        <li class="portfolio__project">
+            <div class="portfolio__project_image">
+                <img src="/img/Oskol-village.png" alt="Посёлок Оскол">
+            </div>
+            <h3 class="portfolio__project_title">
+                Посёлок Оскол
+            </h3>
+        </li>
+        <li class="portfolio__project">
+            <div class="portfolio__project_image">
+                <img src="/img/Golden-City-Settlement.png" alt="Посёлок Золотой город">
+            </div>
+            <h3 class="portfolio__project_title">
+                Посёлок Золотой город
+            </h3>
+        </li>
+        <li class="portfolio__project">
+            <div class="portfolio__project_image">
+                <img src="/img/Novorizhskaya-Manor.png" alt="Усадьба Новорижская">
+            </div>
+            <h3 class="portfolio__project_title">
+                Усадьба Новорижская
+            </h3>
+        </li>
+        <li class="portfolio__project">
+            <div class="portfolio__project_image">
+                <img src="/img/Recreation-area-Zarechye.png" alt="Зона отдыха Заречье">
+            </div>
+            <h3 class="portfolio__project_title">
+                Зона отдыха Заречье
+            </h3>
+        </li>
+        <li class="portfolio__project _other">
+            <h3 class="portfolio__project_title">
+                Другие проекты
+            </h3>
+        </li>
+    </ul>
+</section>
+
 @@include('../layout/footer.html')
