--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -513,6 +513,23 @@
             Заказать проект
         </a>
     </section>
+
+    <section class="substrate-form">
+        <div class="substrate-form__content">
+            <div class="substrate-form__title section__title">
+                <h2 class="section__title_h2">
+                    Закажи ландшафтный дизайн под ключ и получи скидку 10%
+                </h2>
+            </div>
+            <button class="substrate-form__button button">
+                Оставить заявку
+            </button>
+        </div>
+        <div class="substrate-form__images">
+            <img src="/img/substrate-form_top.png" alt="">
+            <img src="/img/substrate-form_bottom.png" alt="">
+        </div>
+    </section>
 </div>
 
 @@include('../layout/footer.html')
