--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -530,6 +530,82 @@
             <img src="/img/substrate-form_bottom.png" alt="">
         </div>
     </section>
+
+    <section class="price">
+        <div class="price__title section__title">
+            <div class="price__title_line section__title_line"></div>
+            <h2 class="section__title_h2">
+                Цены на ландшафтные услуги
+            </h2>
+        </div>
+        <ol class="price__list">
+            <li class="price__item">
+                <div class="price__item_show">
+                    <div class="price__item_title">
+                        Название услуги ландшафтного дома
+                        <div class="price__item_line"></div>
+                    </div>
+                    <div class="price__item_cost">
+                        от 50 000 рублей
+                    </div>
+                    <div class="price__item_switch"></div>
+                </div>
+                <div class="price__item_hide"></div>
+            </li>
+            <li class="price__item">
+                <div class="price__item_show">
+                    <div class="price__item_title">
+                        Название услуги ландшафтного дома
+                        <div class="price__item_line"></div>
+                    </div>
+                    <div class="price__item_cost">
+                        от 500 000 рублей
+                    </div>
+                    <div class="price__item_switch"></div>
+                </div>
+                <div class="price__item_hide"></div>
+            </li>
+        </ol>
+        <button class="price__button button">
+            Заказать рассчет
+        </button>
+        <div class="price__hint">
+            * Указанные цены не являются публичной офертой. Уточнить наличие и стоимость продукции на текущий день можно у наших менеджеров по контактным телефонам или с помощью формы обратной связи.
+        </div>
+    </section>
+</div>
+
+<div class="advantages">
+    <div class="container">
+        <div class="advantages__container">
+            <div class="advantages__title section__title">
+                <div class="advantages__title_line section__title_line"></div>
+                <h2 class="section__title_h2">
+                    Преимущества
+                </h2>
+            </div>
+            <div class="advantages__content">
+                <div class="advantages__content_left">
+                    Свой автопарк для перевозки
+                </div>
+                <div class="advantages__content_right">
+                    <div class="advantages__content_right_left">
+                        <p>
+                            Более 500 видов растений
+                        </p>
+                        <p>
+                            Весь товар сертифицирован
+                        </p>
+                    </div>
+                    <div class="advantages__content_right_right">
+                        <p>
+                            10 лет на рынке
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 @@include('../layout/footer.html')
