--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -67,127 +67,127 @@
         </div>
     </section>
 
-    <section class="services">
-        <div class="section__title services__title">
+    <section class="products">
+        <div class="section__title products__title">
             <div class="section__title_line"></div>
-            <h2 class="services__h2">
+            <h2 class="products__h2">
                 Наши услуги
             </h2>
         </div>
-        <ul class="services__list">
-            <li class="services__item">
-                <a class="services__item_inner" href="">
-                    <div class="services__item_image">
-                        <img src="/img/garden-care-services.png" alt="Услуги по уходу за садом">
+        <ul class="products__list">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/garden-care-products.png" alt="Услуги по уходу за садом">
                     </div>
-                    <div class="services__item_title">
+                    <div class="products__item_title">
                         Услуги по уходу за садом
                     </div>
-                    <div class="services__item_description">
+                    <div class="products__item_description">
                         Услуги по уходу за садом
                     </div>
                 </a>
             </li>
-            <li class="services__item">
-                <a class="services__item_inner" href="">
-                    <div class="services__item_image">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
                         <img src="/img/landscaping-site.png" alt="Озеленение участка">
                     </div>
-                    <div class="services__item_title">
+                    <div class="products__item_title">
                         Озеленение участка
                     </div>
-                    <div class="services__item_description">
+                    <div class="products__item_description">
                         Услуги по уходу за садом
                     </div>
                 </a>
             </li>
-            <li class="services__item">
-                <a class="services__item_inner" href="">
-                    <div class="services__item_image">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
                         <img src="/img/planting-plants.png" alt="Посадка растений">
                     </div>
-                    <div class="services__item_title">
+                    <div class="products__item_title">
                         Посадка растений
                     </div>
-                    <div class="services__item_description">
+                    <div class="products__item_description">
                         Услуги по уходу за садом
                     </div>
                 </a>
             </li>
-            <li class="services__item">
-                <a class="services__item_inner" href="">
-                    <div class="services__item_image">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
                         <img src="/img/garden-and-park-construction.png" alt="Садово-парковое строительство">
                     </div>
-                    <div class="services__item_title">
+                    <div class="products__item_title">
                         Садово-парковое строительство
                     </div>
-                    <div class="services__item_description">
+                    <div class="products__item_description">
                         Услуги по уходу за садом
                     </div>
                 </a>
             </li>
-            <li class="services__item">
-                <a class="services__item_inner" href="">
-                    <div class="services__item_image">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
                         <img src="/img/landscape-construction.png" alt="Ландшафтное строительство">
                     </div>
-                    <div class="services__item_title">
+                    <div class="products__item_title">
                         Ландшафтное строительство
                     </div>
-                    <div class="services__item_description">
+                    <div class="products__item_description">
                         Услуги по уходу за садом
                     </div>
                 </a>
             </li>
-            <li class="services__item">
-                <a class="services__item_inner" href="">
-                    <div class="services__item_image">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
                         <img src="/img/landscape-design.png" alt="Ландшафтный дизайн">
                     </div>
-                    <div class="services__item_title">
+                    <div class="products__item_title">
                         Ландшафтный дизайн
                     </div>
-                    <div class="services__item_description">
+                    <div class="products__item_description">
                         Услуги по уходу за садом
                     </div>
                 </a>
             </li>
-            <li class="services__item">
-                <a class="services__item_inner" href="">
-                    <div class="services__item_image">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
                         <img src="/img/landscape-designing.png" alt="Ландшафтное проектирование">
                     </div>
-                    <div class="services__item_title">
+                    <div class="products__item_title">
                         Ландшафтное проектирование
                     </div>
-                    <div class="services__item_description">
+                    <div class="products__item_description">
                         Услуги по уходу за садом
                     </div>
                 </a>
             </li>
-            <li class="services__item">
-                <a class="services__item_inner" href="">
-                    <div class="services__item_image">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
                         <img src="/img/equipment-design.png" alt="Оснащение дизайн">
                     </div>
-                    <div class="services__item_title">
+                    <div class="products__item_title">
                         Оснащение дизайн
                     </div>
-                    <div class="services__item_description">
+                    <div class="products__item_description">
                         Услуги по уходу за садом
                     </div>
                 </a>
             </li>
-            <li class="services__item">
-                <a class="services__item_inner" href="">
-                    <div class="services__item_image">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
                         <img src="/img/growing-fauna.png" alt="Выращивание фауны">
                     </div>
-                    <div class="services__item_title">
+                    <div class="products__item_title">
                         Выращивание фауны
                     </div>
-                    <div class="services__item_description">
+                    <div class="products__item_description">
                         Услуги по уходу за садом
                     </div>
                 </a>
@@ -570,7 +570,8 @@
             Заказать рассчет
         </button>
         <div class="price__hint">
-            * Указанные цены не являются публичной офертой. Уточнить наличие и стоимость продукции на текущий день можно у наших менеджеров по контактным телефонам или с помощью формы обратной связи.
+            * Указанные цены не являются публичной офертой. Уточнить наличие и стоимость продукции на текущий день можно
+            у наших менеджеров по контактным телефонам или с помощью формы обратной связи.
         </div>
     </section>
 </div>
@@ -607,5 +608,176 @@
         </div>
     </div>
 </div>
+
+<div class="container">
+    <section class="products">
+        <div class="section__title products__title">
+            <div class="section__title_line"></div>
+            <h2 class="products__h2">
+                Магазин растений
+            </h2>
+        </div>
+        <ul class="products__list">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/coniferous-trees.png" alt="Хвойные деревья">
+                    </div>
+                    <div class="products__item_title">
+                        Хвойные деревья
+                    </div>
+                    <div class="products__item_description">
+                        Лорем эпсум или что-то
+                    </div>
+                </a>
+            </li>
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/deciduous-trees.png" alt="Лиственные деревья">
+                    </div>
+                    <div class="products__item_title">
+                        Лиственные деревья
+                    </div>
+                    <div class="products__item_description">
+                        Лорем эпсум или что-то
+                    </div>
+                </a>
+            </li>
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/krupnomerah.png" alt="Крупномеры">
+                    </div>
+                    <div class="products__item_title">
+                        Крупномеры
+                    </div>
+                    <div class="products__item_description">
+                        Лорем эпсум или что-то
+                    </div>
+                </a>
+            </li>
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/nivaki.png" alt="Ниваки">
+                    </div>
+                    <div class="products__item_title">
+                        Ниваки
+                    </div>
+                    <div class="products__item_description">
+                        Лорем эпсум или что-то
+                    </div>
+                </a>
+            </li>
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/shrubs.png" alt="Кустарники">
+                    </div>
+                    <div class="products__item_title">
+                        Кустарники
+                    </div>
+                    <div class="products__item_description">
+                        Лорем эпсум или что-то
+                    </div>
+                </a>
+            </li>
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/formed-trees.png" alt="Формированные деревья">
+                    </div>
+                    <div class="products__item_title">
+                        Формированные деревья
+                    </div>
+                    <div class="products__item_description">
+                        Лорем эпсум или что-то
+                    </div>
+                </a>
+            </li>
+        </ul>
+        <a class="products__download button" href="">
+            Скачать каталог
+        </a>
+    </section>
+</div>
+
+<section class="reviews">
+    <div class="container">
+        <div class="section__title reviews__title">
+            <div class="section__title_line"></div>
+            <h2 class="reviews__h2">
+                Отзывы клиентов
+            </h2>
+        </div>
+        <div class="reviews__list">
+            <ul class="reviews__list_inner" style="--transform-x: 0%">
+                <li class="reviews__item">
+                    <div class="reviews__item_name">
+                        Отец Владимир
+                    </div>
+                    <div class="reviews__item_comment">
+                        Недавно завершили строительство нашего Храма. Место выбрали
+                        изначально пустынное. Поэтому сразу же встал вопрос про
+                        облагораживание территории. Некоторые из прихожан предлагали
+                        свою помощь. Мы им благодарны. Но понимаем - любой работой
+                        должны заниматься профессионалы. Тем более, что участок - 5
+                        гектаров. Вряд ли любители справятся с такой задачей. Один из
+                        прихожан посоветовал нам студию Ландшафтный Дом. Настоящие
+                        мастера! Быстро вникли в суть задачи. Предложили решения
+                        Выслушали пожелания. И реализовали все как раз к моменту
+                        открытия Храма!
+                    </div>
+                </li>
+                <li class="reviews__item">
+                    <div class="reviews__item_name">
+                        Дарья
+                    </div>
+                    <div class="reviews__item_comment">
+                        Удивлена, что насколько нужно всего сделать при оформлении загородного участка. Просто
+                        разрываюсь на
+                        части. И когда уже опустились руки, мне посоветовали обратиться к услугам ландшафтного
+                        дизайнера. И
+                        нисколько не пожалела, что сделала это. Ребята всё быстро организовали, работали согласно
+                        оговоренным условиям, если нужно было что-то изменить обязательно обсуждали все моменты со мной,
+                        а
+                        потом уже приступали к работе. Мне это очень понравилось. Люблю, когда всё четко и ясно, без
+                        лишних
+                        заморочек.
+                    </div>
+                </li>
+                <li class="reviews__item">
+                    <div class="reviews__item_name">
+                        Дарья
+                    </div>
+                    <div class="reviews__item_comment">
+                        Удивлена, что насколько нужно всего сделать при оформлении загородного участка. Просто
+                        разрываюсь на
+                        части. И когда уже опустились руки, мне посоветовали обратиться к услугам ландшафтного
+                        дизайнера. И
+                        нисколько не пожалела, что сделала это. Ребята всё быстро организовали, работали согласно
+                        оговоренным условиям, если нужно было что-то изменить обязательно обсуждали все моменты со мной,
+                        а
+                        потом уже приступали к работе. Мне это очень понравилось. Люблю, когда всё четко и ясно, без
+                        лишних
+                        заморочек.
+                    </div>
+                </li>
+            </ul>
+            <div class="reviews__counter">
+                <div class="reviews__counter_start">
+                    02
+                </div>
+                <span>
+                    /
+                </span>
+                <div class="reviews__counter_max">
+                    13
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 @@include('../layout/footer.html')
