--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -780,4 +780,63 @@
     </div>
 </section>
 
+<div class="container">
+    <section class="questions">
+        <div class="section__title questions__title">
+            <div class="section__title_line"></div>
+            <h2 class="questions__h2">
+                Отзывы клиентов
+            </h2>
+        </div>
+        <ol class="questions__list">
+            <li class="questions__item">
+                <div class="questions__item_title">
+                    Почему именно мы?
+                    <div class="questions__item_line"></div>
+                </div>
+                <div class="questions__item_answer">
+                    Мы предлагаем уникальные решения ландшафтного дизайна для самых взыскательных клиентов . Мы более 7
+                    лет на рынке и построили более 320 проектов. Наши клиенты всегда остаются довольными и на этом моя
+                    фантазия в одинадцать вечера заканчивается. Можно придумать что угодно
+                </div>
+            </li>
+            <li class="questions__item">
+                <div class="questions__item_title">
+                    Стоит ли до проектирования оговаривать бюджет?
+                    <div class="questions__item_line"></div>
+                </div>
+                <div class="questions__item_answer">
+                    Без сомнения это позволит разработать проект, реализация которого будет соответствовать планируемому
+                    бюджету.
+                </div>
+            </li>
+            <li class="questions__item">
+                <div class="questions__item_title">
+                    А через сколько времени мой сад начнет меня радовать?
+                    <div class="questions__item_line"></div>
+                </div>
+                <div class="questions__item_answer">
+                    Декоративный сад становится через год, после посадки растений, если высаживаются крупномеры растений
+                    и производится тщательный уход за ними.
+                </div>
+            </li>
+            <li class="questions__item">
+                <div class="questions__item_title">
+                    Я хочу, чтобы до заключения договора на проектирование на мой участок приехал и проконсультировал
+                    меня специалист. Возможно ли это?
+                    <div class="questions__item_line"></div>
+                </div>
+                <div class="questions__item_answer">
+                    Мы предлагаем уникальные решения ландшафтного дизайна для самых взыскательных клиентов . Мы более 7
+                    лет на рынке и построили более 320 проектов. Наши клиенты всегда остаются довольными и на этом моя
+                    фантазия в одинадцать вечера заканчивается. Можно придумать что угодно
+                </div>
+            </li>
+        </ol>
+        <a class="questions__all-link button" href="">
+            Читать все
+        </a>
+    </section>
+</div>
+
 @@include('../layout/footer.html')
